<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    
	android:layout_width="fill_parent"     
	android:layout_height="fill_parent"    
	android:scrollbars="vertical">
	<LinearLayout
		 android:layout_width="match_parent"
		 android:layout_height="match_parent"
		 android:orientation="vertical"
		 android:background="#FFFFFF">
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="22sp"
	  		android:textStyle="bold"
	  		android:text="@string/help0"
		 />
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="18sp"
	  		android:text="@string/help0text"
		 />
		 
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="22sp"
	  		android:textStyle="bold"
	  		android:text="@string/help1"
		 />
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="18sp"
	  		android:text="@string/help1text"
		 />
		 
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="22sp"
	  		android:textStyle="bold"
	  		android:text="@string/help2"
		 />
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="18sp"
	  		android:text="@string/help2text"
		 />
		 
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="22sp"
	  		android:textStyle="bold"
	  		android:text="@string/help3"
		 />
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="18sp"
	  		android:text="@string/help3text"
		 />
		 
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="22sp"
	  		android:textStyle="bold"
	  		android:text="@string/help4"
		 />
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="18sp"
	  		android:text="@string/help4text"
		 />
		 
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="22sp"
	  		android:textStyle="bold"
	  		android:text="@string/help5"
		 />
		 <TextView
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:textSize="18sp"
	  		android:text="@string/help5text"
		 />
		 <Button
		 	android:id="@+id/backButton"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:text="@string/back"
		 />
	</LinearLayout>
</ScrollView>