<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"    
	android:layout_width="fill_parent"     
	android:layout_height="fill_parent"    
	android:scrollbars="vertical"
	android:background="#FFFFFF">
	<RelativeLayout
	  	android:layout_width="match_parent"
	  	android:layout_height="match_parent"
	  	android:orientation="vertical"
	  	android:background="#FFFFFF">
	  	<TextView
	  		android:id="@+id/label1"
	  		android:layout_width="match_parent"
	  		android:layout_height="wrap_content"
	  		android:textColor="#000000"
	  		android:text="z = "
	  	/>
	  	<EditText
	  		android:id="@+id/editText"
	  		android:layout_width="fill_parent"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/label1"
	  		android:singleLine="true"
	  		android:text="pow(X/4,2)+pow(Y/4,2)"
	  	/>
	  	<TextView
	  		android:id="@+id/label2"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/editText"
	  		android:textColor="#000000"
	  		android:text="X 和 Y 的取值范围："
	  	/>
	  	<EditText
	  		android:id="@+id/downNumber"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/label2"
	  		android:layout_toLeftOf="@id/label3"
	  		android:singleLine="true"
	  		android:numeric="integer"
	  		android:maxLength="5"
	  		android:text="-10"
	  	/>
	  	<TextView
	  		android:id="@+id/label3"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/label2"
	  		android:layout_toLeftOf="@id/upNumber"
	  		android:layout_alignBaseline="@id/downNumber"
	  		android:textColor="#000000"
	  		android:text="到"
	  	/>
	  	<EditText
	  		android:id="@+id/upNumber"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/label2"
	  		android:layout_alignParentRight="true"
	  		android:singleLine="true"
	  		android:numeric="integer"
	  		android:maxLength="5"
	  		android:text="10"
	  	/>
	  	<Button
	  		android:id="@+id/backButton"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/downNumber"
	  		android:layout_alignParentRight="true"
	  		android:text="@string/back"
	  	/>
	  	<Button
	  		android:id="@+id/makeButton"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/downNumber"
	  		android:layout_toLeftOf="@id/backButton"
	  		android:text="@string/make"
	  	/>
	  	<Button
	  		android:id="@+id/clearButton"
	  		android:layout_width="wrap_content"
	  		android:layout_height="wrap_content"
	  		android:layout_below="@id/downNumber"
	  		android:layout_toLeftOf="@id/makeButton"
	  		android:text="@string/clear"
	  	/>
	</RelativeLayout>
</ScrollView>